--- a/Water Drink Water/src/clients/blazor.wa.tbd/Pages/Home.razor
+++ b/Water Drink Water/src/clients/blazor.wa.tbd/Pages/Home.razor
@@ -1,4 +1,5 @@
 ﻿@page "/"
+@using blazor.wa.tbd.Services
 
 <PageTitle>Welcome</PageTitle>
 
@@ -6,16 +7,35 @@
     <div class="row">
         <div class="col-md-12">
             <h1>Login</h1>
-
-            <input type="email" class="form-control" placeholder="Email"/>
-            <input type="password" class="form-control" placeholder="Password"/>
-            <button class="btn btn-primary">Login</button>
+            <input type="email" class="form-control" placeholder="Email" @bind="Email"/>
+            <input type="password" class="form-control" placeholder="Password" @bind="Password"/>
+            <button class="btn btn-primary" onclick="@(async () => await Login())">Login</button>
         </div>
     </div>
 </div>
 
 @code {
 
-    
+    [Inject] private UserService UserService { get; set; } = null!;
+    [Inject] private NavigationManager Navigation { get; set; } = null!;
+
+    private string Email { get; set; } = "";
+    private string Password { get; set; } = "";
+
+    protected override async Task OnInitializedAsync()
+    {
+        if (await UserService.IsAuthenticated())
+        {
+            Navigation.NavigateTo("/log");
+        }
+    }
+
+    private async Task Login()
+    {
+        if (await UserService.Authenticate(Email, Password))
+        {
+            Navigation.NavigateTo("/log");
+        }
+    }
 
 }
