--- a/Water Drink Water/src/clients/blazor.wa.tbd/Layout/NavMenu.razor
+++ b/Water Drink Water/src/clients/blazor.wa.tbd/Layout/NavMenu.razor
@@ -15,11 +15,23 @@
                 <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Home
             </NavLink>
         </div>
-
+        
         @if (isAuthenticated)
         {
+            <div class="nav-item px-3">
+                <NavLink class="nav-link" href="/log" Match="NavLinkMatch.All">
+                    <span class="bi bi-journal-arrow-down-nav-menu" aria-hidden="true"></span> Log
+                </NavLink>
+            </div>
+            
+            <div class="nav-item px-3">
+                <NavLink class="nav-link" href="/preferences" Match="NavLinkMatch.All">
+                    <span class="bi bi-gear-fill-nav-menu" aria-hidden="true"></span> Preferences
+                </NavLink>
+            </div>
+            
             <div class="nav-item px-3" @onclick="@(async () => await Logout())">
-                <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Logout
+                Logout
             </div>
         }
     </nav>
