Preferences Saving / Loading in UI
- TimeZone offset not sufficient, we need to store the timezone id, so we can offset the time correctly. Created API endpoint so server provides timezones as client timezone list can be different based on platform (inconsistent)
- Updated Services, updated tests to account for TimezoneID

--- a/Water Drink Water/src/clients/blazor.wa.tbd/Pages/Preferences.razor
+++ b/Water Drink Water/src/clients/blazor.wa.tbd/Pages/Preferences.razor
@@ -12,10 +12,10 @@
         <div class="col-md-12">
             <label for="timezone">Timezone</label>
 
-            <select id="timezone" class="form-control" @bind="Current.TimeZoneOffsetHours">
-                @foreach (var tz in TimeZoneInfo.GetSystemTimeZones())
+            <select id="timezone" class="form-control" @bind="Current.TimeZoneId">
+                @foreach (var tz in TimeZones)
                 {
-                    <option value="@tz.BaseUtcOffset.TotalHours">@tz.DisplayName</option>
+                    <option value="@tz.Id">@tz.DisplayName</option>
                 }
             </select>
         </div>
