--- a/Water Drink Water/src/clients/blazor.wa.tbd/Pages/Home.razor
+++ b/Water Drink Water/src/clients/blazor.wa.tbd/Pages/Home.razor
@@ -1,5 +1,8 @@
 ﻿@page "/"
-@using blazor.wa.tbd.Services
+
+@using Microsoft.AspNetCore.Authorization
+
+@attribute [AllowAnonymous]
 
 <PageTitle>Welcome</PageTitle>
 
