--- a/Water Drink Water/src/clients/blazor.wa.tbd/Pages/Preferences.razor
+++ b/Water Drink Water/src/clients/blazor.wa.tbd/Pages/Preferences.razor
@@ -1,4 +1,8 @@
 ﻿@page "/preferences"
+@using Microsoft.AspNetCore.Authorization
+
+@attribute [Authorize]
+
 <h3>Preferences</h3>
 
 <div class="container">
