--- a/Water Drink Water/src/clients/blazor.wa.tbd/App.razor
+++ b/Water Drink Water/src/clients/blazor.wa.tbd/App.razor
@@ -1,7 +1,12 @@
-﻿<Router AppAssembly="@typeof(App).Assembly">
+﻿
+<Router AppAssembly="@typeof(App).Assembly">
     <Found Context="routeData">
-        <RouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)"/>
-        <FocusOnNavigate RouteData="@routeData" Selector="h1"/>
+        <AuthorizeRouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)">
+            <NotAuthorized>
+                You Fail
+            </NotAuthorized>
+        </AuthorizeRouteView>
+        <FocusOnNavigate RouteData="@routeData" Selector="h1" />
     </Found>
     <NotFound>
         <PageTitle>Not found</PageTitle>
