--- a/Water Drink Water/src/clients/blazor.wa.tbd/Layout/NavMenu.razor
+++ b/Water Drink Water/src/clients/blazor.wa.tbd/Layout/NavMenu.razor
@@ -10,30 +10,35 @@
 
 <div class="@NavMenuCssClass nav-scrollable" @onclick="ToggleNavMenu">
     <nav class="flex-column">
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Home
-            </NavLink>
-        </div>
-        
-        @if (isAuthenticated)
-        {
-            <div class="nav-item px-3">
-                <NavLink class="nav-link" href="/log" Match="NavLinkMatch.All">
-                    <span class="bi bi-journal-arrow-down-nav-menu" aria-hidden="true"></span> Log
-                </NavLink>
-            </div>
-            
-            <div class="nav-item px-3">
-                <NavLink class="nav-link" href="/preferences" Match="NavLinkMatch.All">
-                    <span class="bi bi-gear-fill-nav-menu" aria-hidden="true"></span> Preferences
-                </NavLink>
-            </div>
-            
-            <div class="nav-item px-3" @onclick="@(async () => await Logout())">
-                Logout
-            </div>
-        }
+        <AuthorizeView>
+            <NotAuthorized>
+                <div class="nav-item px-3">
+                    <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
+                        <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Home
+                    </NavLink>
+                </div>
+            </NotAuthorized>
+
+            <Authorized>
+                <div class="nav-item px-3">
+                    <NavLink class="nav-link" href="/log" Match="NavLinkMatch.All">
+                        <span class="bi bi-journal-arrow-down-nav-menu" aria-hidden="true"></span> Log
+                    </NavLink>
+                </div>
+
+                <div class="nav-item px-3">
+                    <NavLink class="nav-link" href="/preferences" Match="NavLinkMatch.All">
+                        <span class="bi bi-gear-fill-nav-menu" aria-hidden="true"></span> Preferences
+                    </NavLink>
+                </div>
+
+                <div class="nav-item px-3" @onclick="@(async () => await Logout())">
+                    <NavLink class="nav-link" href="#">
+                        Logout
+                    </NavLink>
+                </div>
+            </Authorized>
+        </AuthorizeView>
     </nav>
 </div>
 
@@ -44,18 +49,9 @@
 
     [Inject] private UserService UserService { get; set; } = null!;
 
-    private bool isAuthenticated = false;
-
-    protected override async Task OnInitializedAsync()
-    {
-        isAuthenticated = await UserService.IsAuthenticated();
-    }
-
     private async Task Logout()
     {
         await UserService.Logout();
-
-        isAuthenticated = false;
 
         StateHasChanged();
     }
