--- a/Water Drink Water/src/clients/blazor.wa.tbd/Pages/Log.razor
+++ b/Water Drink Water/src/clients/blazor.wa.tbd/Pages/Log.razor
@@ -1,13 +1,15 @@
 ﻿@page "/log"
-@using blazor.wa.tbd.Services
-<h3>Log</h3>
+@attribute [Authorize]
 
+@using blazor.wa.tbd.Services
+@using Microsoft.AspNetCore.Authorization
+<h3>Log</h3>
 <div class="container">
     <div class="row">
         <div class="col-md-12">
             <h1>Log Water Consumption</h1>
             <label for="fluid-ounces-consumed">Fluid Ounces Consumed</label>
-            <input id="fluid-ounces-consumed" type="number" class="form-control" @bind="FluidOuncesConsumed"/>
+            <input id="fluid-ounces-consumed" type="number" class="form-control" @bind="FluidOuncesConsumed" />
             <button class="btn btn-primary" onclick="@(async () => await LogConsumption())">Log</button>
         </div>
     </div>
