--- a/Water Drink Water/src/clients/blazor.wa.tbd/App.razor
+++ b/Water Drink Water/src/clients/blazor.wa.tbd/App.razor
@@ -1,12 +1,11 @@
-﻿
-<Router AppAssembly="@typeof(App).Assembly">
+﻿<Router AppAssembly="@typeof(App).Assembly">
     <Found Context="routeData">
         <AuthorizeRouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)">
             <NotAuthorized>
-                You Fail
+                <Login />
             </NotAuthorized>
         </AuthorizeRouteView>
-        <FocusOnNavigate RouteData="@routeData" Selector="h1" />
+        <FocusOnNavigate RouteData="@routeData" Selector="h1"/>
     </Found>
     <NotFound>
         <PageTitle>Not found</PageTitle>
