--- a/Water Drink Water/src/clients/blazor.wa.tbd/Layout/NavMenu.razor
+++ b/Water Drink Water/src/clients/blazor.wa.tbd/Layout/NavMenu.razor
@@ -1,4 +1,5 @@
 ﻿@using blazor.wa.tbd.Services
+@using blazor.wa.tbd.Infrastructure
 <div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
         <a class="navbar-brand" href="">Water, Drink Water</a>
@@ -47,11 +48,11 @@
 
     private string? NavMenuCssClass => collapseNavMenu ? "collapse" : null;
 
-    [Inject] private UserService UserService { get; set; } = null!;
+    [Inject] private AuthService AuthService { get; set; } = null!;
 
     private async Task Logout()
     {
-        await UserService.Logout();
+        await AuthService.Logout();
 
         StateHasChanged();
     }
