--- a/Water Drink Water/src/clients/blazor.wa.tbd/Layout/NavMenu.razor
+++ b/Water Drink Water/src/clients/blazor.wa.tbd/Layout/NavMenu.razor
@@ -21,6 +21,14 @@
             </NotAuthorized>
 
             <Authorized>
+                <div class="nav-item d-flex justify-content-center">
+                    <FluentStack>
+                        <FluentProgressRing Value="@(Indeterminate ? null : Percentage)"
+                                            Width="128px"
+                                            Stroke="ProgressStroke.Normal"
+                                            Color="OfficeColor.Default"/>
+                    </FluentStack>
+                </div>
                 <div class="nav-item px-3">
                     <NavLink class="nav-link" href="/log" Match="NavLinkMatch.All">
                         <span class="bi bi-journal-arrow-down-nav-menu" aria-hidden="true"></span> Log
@@ -49,6 +57,17 @@
     private string? NavMenuCssClass => collapseNavMenu ? "collapse" : null;
 
     [Inject] private AuthService AuthService { get; set; } = null!;
+    [Inject] private UserService UserService { get; set; } = null!;
+
+    private bool Indeterminate { get; set; } = true;
+    private int? Percentage { get; set; } = 0;
+
+    protected override async Task OnInitializedAsync()
+    {
+        Percentage = await UserService.GetConsumptionPercentage();
+
+        Indeterminate = false;
+    }
 
     private async Task Logout()
     {
