--- a/Water Drink Water/src/clients/blazor.wa.tbd/_Imports.razor
+++ b/Water Drink Water/src/clients/blazor.wa.tbd/_Imports.razor
@@ -7,6 +7,7 @@
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.AspNetCore.Components.Authorization
 @using Microsoft.JSInterop
+@using Microsoft.FluentUI.AspNetCore.Components
 @using blazor.wa.tbd
 @using blazor.wa.tbd.Layout
 @using blazor.wa.tbd.Components
