added liquid-gauge component

--- a/Water Drink Water/src/clients/blazor.wa.tbd/Layout/NavMenu.razor
+++ b/Water Drink Water/src/clients/blazor.wa.tbd/Layout/NavMenu.razor
@@ -46,6 +46,13 @@
                         Logout
                     </NavLink>
                 </div>
+
+                <div class="nav-item d-flex justify-content-center">
+                    @if (Percentage is { } percentageValue)
+                    {
+                        <LiquidGauge Percentage="@percentageValue"/>
+                    }
+                </div>
             </Authorized>
         </AuthorizeView>
     </nav>
