--- a/Water Drink Water/src/clients/blazor.wa.tbd/Layout/NavMenu.razor
+++ b/Water Drink Water/src/clients/blazor.wa.tbd/Layout/NavMenu.razor
@@ -21,13 +21,11 @@
             </NotAuthorized>
 
             <Authorized>
-                <div class="nav-item d-flex justify-content-center">
-                    <FluentStack>
-                        <FluentProgressRing Value="@(Indeterminate ? null : Percentage)"
-                                            Width="128px"
-                                            Stroke="ProgressStroke.Normal"
-                                            Color="OfficeColor.Default"/>
-                    </FluentStack>
+                <div class="nav-item d-flex justify-content-center pb-4">
+                    @if (Percentage is { } percentageValue)
+                    {
+                        <LiquidGauge Percentage="@percentageValue"/>
+                    }
                 </div>
                 <div class="nav-item px-3">
                     <NavLink class="nav-link" href="/log" Match="NavLinkMatch.All">
@@ -45,13 +43,6 @@
                     <NavLink class="nav-link" href="#">
                         Logout
                     </NavLink>
-                </div>
-
-                <div class="nav-item d-flex justify-content-center">
-                    @if (Percentage is { } percentageValue)
-                    {
-                        <LiquidGauge Percentage="@percentageValue"/>
-                    }
                 </div>
             </Authorized>
         </AuthorizeView>
